--- a/Views/Shared/Site.Master
+++ b/Views/Shared/Site.Master
@@ -2,18 +2,18 @@
 <!DOCTYPE html>
 <html>
 <head runat="server">
-    <title><asp:ContentPlaceHolder ID="TitleContent" runat="server" /></title>
-    <meta content="" name="description">
-    <meta content="" name="keywords">
-    <link href="../../Content/CSS/style.css" rel="stylesheet" type="text/css" />
-    <link href="../../Content/CSS/normilize.css" rel="stylesheet" type="text/css" />
-    <!--[if lt IE 9]> <script type="text/javascript" src="js/html5shiv.js"></script> <![endif]-->
-    <script type='text/javascript' src="../../Scripts/jquery.js"></script>
-    <script type="text/javascript" src="../../Scripts/main.js"></script>
-    <!--<link rel="stylesheet/less" type="text/css" href="css/styles.less">
-    <script src="js/less-1.3.0.min.js" type="text/javascript"></script>-->
-    <script type="text/javascript" src="../../Scripts/fancybox/jquery.fancybox.pack.js"></script>
-    <link rel="stylesheet" href="../../Scripts/fancybox/jquery.fancybox.css" type="text/css" media="screen" />
+	<title><asp:ContentPlaceHolder ID="TitleContent" runat="server" /></title>
+	<meta content="" name="description">
+	<meta content="" name="keywords">
+	<link href="../../Content/CSS/style.css" rel="stylesheet" type="text/css" />
+	<link href="../../Content/CSS/normilize.css" rel="stylesheet" type="text/css" />
+	<!--[if lt IE 9]> <script type="text/javascript" src="js/html5shiv.js"></script> <![endif]-->
+	<script type='text/javascript' src="../../Scripts/jquery.js"></script>
+	<script type="text/javascript" src="../../Scripts/main.js"></script>
+	<!--<link rel="stylesheet/less" type="text/css" href="css/styles.less">
+	<script src="js/less-1.3.0.min.js" type="text/javascript"></script>-->
+	<script type="text/javascript" src="../../Scripts/fancybox/jquery.fancybox.pack.js"></script>
+	<link rel="stylesheet" href="../../Scripts/fancybox/jquery.fancybox.css" type="text/css" media="screen" />
 </head>
 
 <body>
@@ -45,7 +45,7 @@
 				</nav>
 			</header>
 			<div class="content">
-                <asp:ContentPlaceHolder ID="MainContent" runat="server" />
+				<asp:ContentPlaceHolder ID="MainContent" runat="server" />
 			</div>
 			<div class="indent"></div>
 		</div>
@@ -55,6 +55,7 @@
 			<div class="copy">
 				Cice Cosmetics copyright ©2011
 			</div>
+			<% Html.RenderPartial("LogOnUserControl"); %>
 			<div class="social_icons">
 				<ul>
 					<li><a class="vk" href="#"></a></li>
