--- a/Content/CSS/main.css
+++ b/Content/CSS/main.css
@@ -26,7 +26,7 @@ a:hover{ color:#000; text-decoration:underline }
 #centerHolder{ width:844px; margin:auto; }
 #topMenuLine{ height:27px; }
 
-#topMenuLine a, #topMenuLine h1{ display:block; float:left; line-height:21px; color:#505050; width:144px; font-size:11px; 
+#topMenuLine a, #topMenuLine h1{ display:block; float:left; line-height:21px; color:#505050; width:120px; font-size:11px; 
                 border-bottom:7px solid #ccc; text-align:center; background:none; font-weight:normal; padding:0px; margin:0px }
                 
 #topMenuLine a:hover , #topMenuLine h1 { text-decoration:none; color:#fff; }
@@ -35,6 +35,7 @@ a:hover{ color:#000; text-decoration:underline }
 #topMenuLine .c3 {border-bottom-color:#85b700; width:124px} #topMenuLine .c3:hover, #topMenuLine h1.c3  {background:#85b700}
 #topMenuLine .c4 {border-bottom-color:#7b0055} #topMenuLine .c4:hover, #topMenuLine h1.c4  {background:#7b0055}
 #topMenuLine .c5 {border-bottom-color:#005960} #topMenuLine .c5:hover, #topMenuLine h1.c5  {background:#005960}
+#topMenuLine .c6 {border-bottom-color:#957aa6} #topMenuLine .c6:hover, #topMenuLine h1.c6  {background:#957aa6}
 #topMenuLine .c6 {border-bottom-color:#957aa6} #topMenuLine .c6:hover, #topMenuLine h1.c6  {background:#957aa6}
 #topMenuLine .c7 {border-bottom-color:#626522} #topMenuLine .c7:hover, #topMenuLine h1.c7  {background:#626522}
 
